--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nuxtjs/tailwindcss": "^6.12.2",
     "@pinia/nuxt": "^0.7.0",
+    "appwrite": "^16.0.2",
     "nuxt": "^3.14.159",
     "nuxt-lucide-icons": "^1.0.5",
     "pinia": "^2.2.6",
